# crnn

./: .gitignore  Dockerfile  LICENSE  README.md  install_all.sh  thpp_build.sh
model/crnn_demo/: config.lua
src/: BiRnnJoin.lua  CtcCriterion.lua  DatasetLmdb.lua  LstmLayer.lua  SharedParallelTable.lua  build_cpp.sh  demo.lua  inference.lua  main_train.lua  training.lua  utilities.lua
src/cpp/: CMakeLists.txt  ctc.cpp  init.cpp  utils.hpp
tool/: create_dataset.py
